# EDA-Copilot

./: .ent_hash1.txt  .gitignore  .hash1.txt  LICENSE.md  Makefile  README.md  pyproject.toml  requirements.txt  run_app.sh
config/: ent.yml  sparcs.yml  ufc.yml  ufc_bad.yml
data/fixtures/: ent_bad.csv  sparcs_bad.csv  ufc_bad.csv
data/golden/: ent.csv  sparcs.csv  ufc.csv
eda/: __main__.py  cli.py  llm.py  llm_providers.py
streamlit/: secrets.toml
tests/: helpers.py  test_ent_bad_fixture.py  test_ent_contract.py  test_ufc_contract.py
ui/: app.py
