[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eda-copilot"
version = "0.1.0"
description = "Deterministic EDA with contract CSV + auto-written memos"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "pandas>=2.3,<3",
    "numpy>=2.1,<3",
    "matplotlib>=3.8,<4",
    "PyYAML>=6,<7",
    "streamlit>=1.37,<2",
    "pyarrow>=15,<19"
]

[project.scripts]
eda = "eda.cli:main"

[tool.setuptools]
packages = ["eda"]
license-files = ["LICENSE"]